{
    "name": "KeyInput",
    "maps": [
        {
            "name": "Input",
            "id": "9d3d4cf9-03e1-4bde-a663-ee2838667944",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "f44dd809-272f-4cbe-83b4-2efc466e6d08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4e78925-5f60-4772-b9c0-0707094e4ae6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TitleScene",
            "id": "2f3705d9-24b1-48ff-9d6e-da034880fe25",
            "actions": [
                {
                    "name": "NextScene",
                    "type": "Button",
                    "id": "70659a2f-3ec0-4466-9355-26054e2ffd07",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc9c8098-8c54-4e10-8539-d3ccd135efce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}